# ocaml-jsonschema

./: .gitmodules  LICENSE  Makefile  README.md  dune-project  jsonschema-core.opam  jsonschema-validation.opam
lib/jsonschema-core/: compiler.ml  compiler.mli  dune  error.ml  error.mli  instance.ml  instance.mli  json_pointer.ml  json_pointer.mli  jsonschema_core.ml  regex.ml  regex.mli  registry.ml  registry.mli  schema.ml  schema.mli  uri_util.ml  uri_util.mli
lib/jsonschema-validation/: draft07.ml  dune  fmt_datetime.ml  fmt_email.ml  fmt_hostname.ml  fmt_ip.ml  fmt_pointer.ml  fmt_regex.ml  fmt_uri.ml  jsonschema_validation.ml  jsonschema_validation.mli  kw_array.ml  kw_conditional.ml  kw_content.ml  kw_format.ml  kw_logic.ml  kw_numeric.ml  kw_object.ml  kw_string.ml  kw_type.ml  util.ml
test/: dune  test_compiler.ml  test_error.ml  test_instance.ml  test_json_pointer.ml  test_regex.ml  test_registry.ml  test_schema.ml  test_suite_runner.ml  test_uri_util.ml  test_validation_format.ml
